git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1119343 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -9,16 +9,19 @@ log4j.appender.stderr.target=System.err
 log4j.appender.stderr.layout=org.apache.log4j.PatternLayout
 log4j.appender.stderr.layout.ConversionPattern=%d{HH:mm:ss} %-5p %-15c{1} :: %m%n
 
-log4j.logger.btree=INFO
+com.hp.hpl.jena.tdb=INFO
 
-# SDB
-log4j.logger.com.hp.hpl.jena.sdb=INFO
-
-# SQL statements
-log4j.logger.SQL=ALL
+# Jena
+log4j.logger.com.hp.hpl.jena=WARN
 
 # ARQ
 log4j.logger.com.hp.hpl.jena.query=INFO
 
-# Jena
-log4j.logger.com.hp.hpl.jena=WARN
+# SDB
+log4j.logger.com.hp.hpl.jena.sdb=INFO
+
+# SDB/SQL statements
+log4j.logger.SQL=ALL
+
+# TDB
+log4j.logger.com.hp.hpl.jena.tdb=INFO
