git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1119450 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -122,7 +122,8 @@
 
   <!-- Untested -->
   <target name="ivy-publish" depends="ivy-init,jar" description="Publish (with Ivy)">
-    <ivy:publish resolver="publish-resolver" pubrevision="${version}">
+    <ivy:publish resolver="publish-resolver" pubrevision="${version}"
+      			 organisation="com.hp.hpl.jena" module="tdb" revision="${version}">
       <artifacts pattern="${build.lib.dir}/[artifact].[ext]" />
     </ivy:publish>
   </target>
