--- a/ivy.xml
+++ b/ivy.xml
@@ -2,7 +2,11 @@
 <ivy-module version="2.0"
 	    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	    xsi:noNamespaceSchemaLocation="http://ant.apache.org/ivy/schemas/ivy.xsd">
-    <info organisation="com.hp.hpl.jena" module="tdb"/>
+  <info organisation="com.hp.hpl.jena" module="tdb">
+    <license name="BSD"/>
+    <ivyauthor name="Hewlett-Packard" url="http://jena.sf.net/"/>
+    <description>Jena - Semantic Web framework</description>
+  </info>
 
     <configurations defaultconfmapping="main->*">
 	<conf name="main" description="TDB" />
@@ -14,7 +18,6 @@
     </publications>
 
     <dependencies>
-
 	<!-- ?? latest.integration -->
 	<!--
 	<dependency org="com.hp.hpl.jena" name="arq" rev="latest.integration"/>
@@ -42,5 +45,5 @@
 	<exclude org="javax.jms" module="jms"/>
 	<exclude org="javax.mail" module="mail"/>
     </dependencies>
-	
+
 </ivy-module>
