git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1119464 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -120,7 +120,6 @@
 
   <target name="ivy-resolve-report" depends="ivy-init">
     <ivy:resolve conf="dev"
-		 revision="${version}"
 		 haltonfailure="false" failureproperty="ivy.resolve.failed"/>
     <ivy:report todir="${reports.dir}"/>
     <fail message="Ivy dependency failed" if="ivy.resolve.failed"/>
@@ -128,9 +127,8 @@
 
   <!-- Remove jar build check for testing -->
   <target name="ivy-publish" depends="ivy-init" description="Publish (with Ivy)">
+    <ivy:resolve conf="main"/>
     <ivy:publish conf="main" 
-		 organisation="com.hp.hpl.jena" module="tdb"
-		 revision="${version}"
 		 resolver="publish-resolver" 
 		 overwrite="true"
 		 forcedeliver="true">
