git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1119482 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -45,7 +45,7 @@
   <property name="src.dev.dir"            value="src-dev"/>
 
   <property name="build.dir"              value="build"/>
-  <property name="build.lib.dir"          value="build/lib"/>
+  <property name="build.lib.dir"          value="${build.dir}/lib"/>
 
   <property name="lib.dir"                value="lib"/>
   <!-- Testing - scripts and data files -->
