git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1119488 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j.properties
+++ b/log4j.properties
@@ -3,7 +3,7 @@ log4j.rootLogger=WARN, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 ##log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss} %-5p %-15c{1} :: %m%n
-log4j.appender.stdout.layout.ConversionPattern=%-5p :: %m%n
+log4j.appender.stdout.layout.ConversionPattern=%-5p %-15c{1} :: %m%n
 
 log4j.appender.stderr=org.apache.log4j.ConsoleAppender
 log4j.appender.stderr.target=System.err
@@ -24,4 +24,4 @@ log4j.logger.com.hp.hpl.jena=WARN
 
 # TDB
 log4j.logger.com.hp.hpl.jena.tdb=INFO
-# log4j.logger.com.hp.hpl.jena.tdb.base.block.BlockMgrCache=ALL
+##log4j.logger.com.hp.hpl.jena.tdb.base=DEBUG
