git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1119506 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -207,6 +207,7 @@
   <target name="run-junit" depends="jar,clean-reports">
     <mkdir dir="${reports.dir}"/>
     <mkdir dir="${reports.dir.xml}"/>
+    <mkdir dir="tmp/testing"/>
 
     <!-- Don't stop on failure - set a property instead -->
     <junit printsummary="yes" errorProperty="junit.failed" failureProperty="junit.failed">
