--- a/log4j.properties
+++ b/log4j.properties
@@ -24,4 +24,4 @@ log4j.logger.com.hp.hpl.jena=WARN
 
 # TDB
 log4j.logger.com.hp.hpl.jena.tdb=INFO
-##log4j.logger.com.hp.hpl.jena.tdb.base=DEBUG
+#log4j.logger.com.hp.hpl.jena.tdb.base.block.BlockMgrCache=DEBUG
