--- a/pom.xml
+++ b/pom.xml
@@ -8,93 +8,12 @@
   <name>TDB</name>
   <version>1.0-SNAPSHOT</version>
   <description/>
-  <url>http://jena.sf.net/</url>
+  <url>http://jena.sf.net/TDB</url>
 
   <organization>
     <name>Hewlett-Packard</name>
     <url>http://www.hp.com/</url>
   </organization>
-
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.4</version>
-      <scope>test</scope>
-    </dependency>
-    
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.4.3</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
-      <version>1.4.3</version>
-    </dependency>
-
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.15</version>
-    </dependency>
-
-    <dependency>
-      <groupId>xml-apis</groupId>
-      <artifactId>xml-apis</artifactId>
-      <version>1.0.b2</version>
-    </dependency>
-
-    <dependency>
-      <groupId>xml-apis</groupId>
-      <artifactId>xml-apis</artifactId>
-      <version>1.0.b2</version>
-    </dependency>
-    
-    <dependency>
-      <groupId>xerces</groupId>
-      <artifactId>xercesImpl</artifactId>
-      <version>2.7.1</version>
-    </dependency>
-
-    <!-- Lots more -->
-
-  </dependencies>
-
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <sourceDirectory>src-lib</sourceDirectory>
-    <testSourceDirectory>src-test</testSourceDirectory>
-    <testSourceDirectory>src-lib-test</testSourceDirectory>
-    <outputDirectory>build</outputDirectory>
-    <!-- finalName -->
-    <!-- directory -->
-    <plugins>
-      <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-compiler-plugin</artifactId>
-	<configuration>
-	  <source>1.5</source>
-	  <target>1.5</target>
-	</configuration>
-      </plugin>
-
-      <!--
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <includes>
-            <include>**/com/hp/jena/test/TS_JenaCore.java</include>
-          </includes>
-        </configuration>
-      </plugin>
-      -->
-
-    </plugins>
-  </build>
 
   <licenses>
     <license>
@@ -104,10 +23,86 @@
   </licenses>
 
   <scm>	
-    <connection>scm:svn:https://jena.svn.sourceforge.net/svnroot/jena/Scratch/AFS</connection>
-    <developerConnection>scm:svn:https://jena.svn.sourceforge.net/svnroot/jena/Scratch/AFS</developerConnection>
+    <connection>scm:svn:https://jena.svn.sourceforge.net/svnroot/jena/TDB</connection>
+    <developerConnection>scm:svn:https://jena.svn.sourceforge.net/svnroot/jena/TDB</developerConnection>
     <url>http://jena.svn.sourceforge.net/</url>
   </scm>
+
+  <dependencies>
+    <dependency>
+      <groupId>com.hp.hpl.jena</groupId>
+      <artifactId>arq</artifactId>
+      <version>2.3</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>com.hp.hpl.jena</groupId>
+      <artifactId>arq-extra</artifactId>
+      <version>2.3</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.4</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.4.3</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.4.3</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.15</version>
+      <optional>true</optional>
+    </dependency>
+  </dependencies>
+
+  <build>
+This does not work in Maven2
+Apparently it's possible but the maven web site contains no information beyond some sections headings.
+    <sourceDirectory>src</sourceDirectory>
+    <sourceDirectory>src-lib</sourceDirectory>
+    <testSourceDirectory>src-test</testSourceDirectory>
+    <testSourceDirectory>src-lib-test</testSourceDirectory>
+    <outputDirectory>build</outputDirectory>
+
+    <finalName>${project.artifactId}-${project.version}</finalName>
+
+    <plugins>
+      <plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-compiler-plugin</artifactId>
+	<configuration>
+	  <source>1.6</source>
+	  <target>1.6</target>
+	</configuration>
+      </plugin>
+
+      <!--
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <includes>
+            <include>?????????</include>
+          </includes>
+        </configuration>
+      </plugin>
+      -->
+
+    </plugins>
+  </build>
+
 
   <!-- <reporting/> -->
   <!-- <repositories/> -->
