--- a/build.xml
+++ b/build.xml
@@ -151,10 +151,10 @@
   <target name="ivy-publish" depends="ivy-init" description="Publish (with Ivy)">
     <ivy:resolve conf="main"/>
     <ivy:publish conf="main" 
-		 resolver="publish-resolver" 
+		 resolver="jena-dev-publish" 
 		 overwrite="true"
 		 forcedeliver="true">
-      <artifacts pattern="${artifacts.dir}/[artifact]-[$revision].[ext]" />
+      <artifacts pattern="${artifacts.dir}/[artifact]-[revision].[ext]" />
     </ivy:publish>
   </target>
 
