git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1119648 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -151,7 +151,7 @@
   <target name="ivy-publish" depends="ivy-init" description="Publish (with Ivy)">
     <ivy:resolve conf="main"/>
     <ivy:publish conf="main" 
-		 resolver="jena-dev-publish" 
+		 resolver="dev-publish" 
 		 overwrite="true"
 		 forcedeliver="true">
       <artifacts pattern="${artifacts.dir}/[artifact]-[revision].[ext]" />
