--- a/ivy.xml
+++ b/ivy.xml
@@ -20,6 +20,7 @@
     <!-- Add the Maven pom.xml as an artifact -->
     <artifact name="tdb" type="jar"/>
     <artifact name="tdb-src" type="source" ext="zip"/>
+    <artifact name="tdb" type="xml"    ext="pom"/>
   </publications>
 
   <dependencies>
