git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1119652 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -401,8 +401,9 @@
   </target>  
   
   <target name="clean-build-area" description="Clean the build area">
-	<delete dir="${build.classes.dir}"/>
-  	<delete dir="${artifacts.dir}"/>
+    <delete dir="${build.classes.dir}"/>
+    <delete dir="${artifacts.dir}"/>
+    <delete dir="${build.dir}/${jarfile}"/>
   </target>
 
 </project>
