git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1119657 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -6,6 +6,8 @@
   <property name="Name"                   value="TDB"/>
   <property name="name"                   value="tdb"/>
 
+  <property environment="env"/>
+
   <!-- The major and minor version numbers  -->
   <property name="version-major"   value="0"/>
   <property name="version-minor"   value="5"/>
